chore: update index.astro

--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>Hello, 歡迎你 !!</h1>
+			<h1>Hello!!</h1>
 			<p>這裡紀錄了一些程式開發有關的內容，還有一些不確定的東西...</p>
 		</main>
 		<Footer />
